Fixed alignment and edited new project

--- a/main.css
+++ b/main.css
@@ -84,6 +84,7 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     min-width: 250px;
     width: calc(90vw - 50px);
     max-width: 750px;
@@ -121,10 +122,6 @@ h2 {
     padding-bottom: 10px;
     border-radius: 5px;
     background-color: #2f343a;
-}
-
-.clickable-div + .clickable-div {
-    margin-top: 15px;
 }
 
 .project-title {
